# MadAI

./: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  case_structuring.py  clinical_tool_agent.py  corpus_paths.py  trial_vector_kb.py  workflow.py  病历输入到Calculator执行_全过程.md
docs/: protocol-implementation.md
scripts/: __init__.py  analyze_totrials.py  build_treatment_department_payloads.py  evaluate.py  example.md  probe_agent_handoff.py  riskqa_support.py  run_baselines.py  run_riskqa_parallel.py  run_smoke_tests.py  try_single_case_workflow.py
small_tools/: find_text_locations.py
tests/: __init__.py  test_build_treatment_department_payloads.py  test_calculation_match_summarization.py  test_clinical_tool_agent_parameter_retrieval.py  test_clinical_tool_agent_selection_context.py  test_env_loading.py  test_evaluate_trial_retrieval.py  test_execution_tools_chat_client.py  test_execution_tools_prose_compilation.py  test_graph_snapshots.py  test_live_medical_knowledge_tools.py  test_orchestrator_state.py  test_protocol_cards.py  test_protocol_eligibility_pipeline.py  test_protocol_medical_knowledge.py  test_question_retrieval_sanitization.py  test_retrieval_tools_minimal.py  test_run_riskqa_parallel_metrics.py  test_run_riskqa_tasks.py  test_tool_spec_export.py  test_trial_qdrant_sync.py  test_trial_qdrant_tools.py  test_trial_retrieval_tools.py  test_trial_vector_kb.py  test_trial_vector_retrieval_tools.py  test_try_single_case_workflow.py  test_use_riskqa_parallel.py  test_workflow.py
数据/: test.json  (+4 more)
(+174 files in other folders)
